# govfundingchatbot

./: .env.sample  .gitignore  Agents.md  CLAUDE.md  NSF Funding.py  PROJECT_STRUCTURE.md  README.md  load_data.py  pyproject.toml  rag_pipeline.py  requirements.txt  streamlit_chatbot.py
.github/workflows/: qodana_code_quality.yml
apps/: __init__.py
apps/etl/: __init__.py  config.py  pipeline.py  requirements.txt  run_etl_test.py
apps/etl/embeddings/: opportunity_embedder.py
apps/etl/sources/: __init__.py  grants_xml.py  nsf_awards.py
apps/etl/transformers/: awards.py  opportunities.py
apps/etl/utils/: __init__.py  time.py
apps/web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  (+1 more)
docs/: COMPETITIVE_ANALYSIS.md  FEDERAL_FUNDING_APIS.md  FRONTEND_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LEGAL_COMPLIANCE.md  USER_FLOW.md  data-pipeline.md  ui-mvp.md  user-research.md
docs/architecture/: deployment-strategy.md  system-overview.md
docs/backlog/: unimplemented-features.md
docs/design/: ui-layout-specification.md
docs/product/: data-pipeline.md  roadmap.md
docs/releases/: v1.1.1.md
docs/requests/: 2025-10-10.md
etl/: __init__.py  models.py  pipeline.py
etl/sources/: __init__.py
etl/transformers/: awards.py  opportunities.py
etl/utils/: __init__.py  time.py
infra/migrations/: 001_initial_schema.sql  001_initial_schema_fixed.sql  001_initial_schema_rollback.sql  README.md
release-notes/: README.md  v1.0.0.md  v1.1.0.md  v1.1.1.md  v2.0.0-STRATEGIC_PLAN.md
scripts/: run_etl.sh
(+8 files in other folders)
