[tool.poetry]
name = "govfunding"
version = "0.1.0"
description = "NSF funding data ETL and RAG pipeline"
authors = ["Hosung You <hosung@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6"
pydantic-settings = "^2.2"
httpx = {extras = ["http2"], version = "^0.27.0"}
lxml = "^5.2"
structlog = "^24.1"
python-dotenv = "^1.0"
langchain = "^0.1"
langchain-openai = "^0.1"
langchain-pinecone = "^0.1"
pinecone-client = "^4.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.3"
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
